fix(infotip): add missing margin-left to close button (#1386)

--- a/src/less/infotip/base/infotip.less
+++ b/src/less/infotip/base/infotip.less
@@ -111,6 +111,7 @@ span.infotip__heading {
 .infotip .icon-btn {
     flex-shrink: 0; // todo: Should move to icon-btn in next major
     height: 20px;
+    margin-left: 16px;
     outline-offset: 2px;
     overflow: visible;
     width: 20px;
